--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-uvicorn
-fastapi
-pydantic
-typing
-streamlit
-requests
-pandas
-plotly
+fastapi==0.111.3
+uvicorn[standard]==0.23.2
+pydantic==2.6.2
+requests==2.32.0
+plotly==5.15.0
+pandas==2.1.1
