--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.116.0
-uvicorn[standard]==0.23.2
-pydantic==2.6.2
+uvicorn==0.23.2
+pydantic==2.5.2
 requests==2.32.0
+pandas==2.1.1
 plotly==5.15.0
-pandas==2.0.3
